Remove unneded additions
Use java 21, not 25, to compile